[package]
name = "dec-number"
version = "0.0.1"
authors = ["Dariusz Depta <dariusz.depta@engos.software>"]
description = "Decimal Floating Point decNumber Rust Library"
documentation = "https://docs.rs/dec-number"
repository = "https://github.com/EngosSoftware/decNumber.rs.git"
license = "MIT"
edition = "2021"

[dependencies]
