[package]
name = "dec-number"
version = "0.0.1"
authors = ["Dariusz Depta <dariusz.depta@engos.software>"]
description = "Decimal Floating Point decNumber Rust Library"
documentation = "https://docs.rs/dec-number"
repository = "https://github.com/EngosSoftware/decNumber.rs.git"
license = "MIT"
edition = "2021"

[features]
# Enable extended flags, extended flags setting, switch off to use only IEEE flags.
dec-ext-flag = []
# Enable subset arithmetic, conditional code flag, switch off for best performance.
dec-subset = []

[dependencies]
